# meilisearch

benchmarks/: Cargo.toml
index-scheduler/src/: features.rs
meilisearch/: Cargo.toml
milli/: Cargo.toml
milli/src/update/index_documents/: mod.rs
milli/src/update/index_documents/extract/: mod.rs
xtask/: Cargo.toml
xtask/src/: bench.rs  main.rs
xtask/src/bench/: mod.rs  rebench.rs
