[package]
name = "xtask"
version.workspace = true
authors.workspace = true
description = "Workspace automation tool following the xtask pattern <https://github.com/matklad/cargo-xtask>"
homepage.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cargo_metadata = "0.18.1"
clap = { version = "4.4.14", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
