[package]
name = "xtask"
version.workspace = true
authors.workspace = true
description = "Workspace automation tool following the xtask pattern <https://github.com/matklad/cargo-xtask>"
homepage.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cargo_metadata = "0.18.1"
clap = { version = "4.4.14", features = ["derive"] }
futures-core = "0.3.30"
futures-util = "0.3.30"
meilisearch-auth = { version = "1.6.0", path = "../meilisearch-auth" }
reqwest = { version = "0.11.23", features = ["stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["rt", "net", "time", "process"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-trace = { version = "0.1.0", path = "../tracing-trace" }
